--- a/app/client/style.css
+++ b/app/client/style.css
@@ -4,3 +4,9 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+  .landing {
+  background: url("/images/manoa-campus.jpg");
+  background-size: cover;
+    height: 100%;
+}
