--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,3 +1,10 @@
+.NavBar{
+  background-color: green;
+  color: white;
+  padding-top: 200px;
+  padding-left: 0px;
+}
+
 .footer-background {
   background-color: green;
   color: white;
@@ -10,6 +17,6 @@
   background-size: cover;
   height: 100%;
   margin: 0;
-  padding-top: 250px;
-  padding-bottom: 200px;
+  padding-top: -20px;
+  padding-bottom: 450px;
 }
