--- a/app/client/style.css
+++ b/app/client/style.css
@@ -6,7 +6,7 @@
 }
 
 .footer-background {
-  background-color: green;
+  background-color: #363636;
   color: white;
   padding-top: 20px;
   padding-bottom: 0px;
