--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,8 +1,15 @@
-.NavBar{
+.TitleBar{
   background-color: green;
   color: white;
   padding-top: 100px;
   padding-left: 0px;
+}
+
+.NavBar{
+  background-color: white;
+  padding-top: 0px;
+  padding-left: 0px;
+  padding-bottom: 10px;
 }
 
 .footer-background {
