added blur image

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -20,7 +20,7 @@
 }
 
 .landing {
-  background: url("/images/manoa-campus.jpg");
+  background: url("/images/manoa-blur.jpg");
   background-size: cover;
   height: 100%;
   margin: 0;
