edited navbar a bit

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -7,8 +7,8 @@
 
 .NavBar{
   background-color: white;
-  padding-top: 0px;
-  padding-left: 0px;
+  padding-top: 0;
+  padding-left: 0;
   padding-bottom: 10px;
 }
 
