--- a/app/client/style.css
+++ b/app/client/style.css
@@ -23,7 +23,7 @@
   height: 100%;
   margin: 0;
   padding-top: -20px;
-  padding-bottom: 200px;
+  padding-bottom: 0;
   color: white;
   font: sans-serif;
 }
