--- a/app/client/style.css
+++ b/app/client/style.css
@@ -13,8 +13,11 @@
 .footer-background {
   background-color: #363636;
   color: white;
+  padding-bottom: 20px;
   padding-top: 20px;
-  padding-bottom: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .landing {
