--- a/app/client/style.css
+++ b/app/client/style.css
@@ -13,11 +13,10 @@
 .footer-background {
   background-color: #363636;
   color: white;
-  padding-bottom: 20px;
-  padding-top: 20px;
   left: 0;
   bottom: 0;
   right: 0;
+  margin-top: -40px;
 }
 
 .landing {
@@ -33,5 +32,13 @@
 
 .background {
   background: url("/images/manoa-blur.jpg") !important;
-  padding-bottom: 20px;
+  background-size: cover;
+  height: 100%;
+  padding-bottom: 0;
+  color: white;
+  font: sans-serif;
+}
+
+.gridStyle {
+  border-bottom: 40px;
 }
