changed it to be dark background

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -21,7 +21,7 @@
 }
 
 .landing {
-  background: url("/images/manoa-blur.jpg");
+  background: url("/images/manoa-blur-dark.jpg");
   background-size: cover;
   height: 100%;
   margin: 0;
