--- a/app/client/style.css
+++ b/app/client/style.css
@@ -44,6 +44,28 @@
   border-bottom: 40px;
 }
 
-.landing-block {
-  background-color: #FFFFFF !important;
+.features {
+  background-color: #ffffff;
+}
+
+h1 {
+  font-family: "Roboto", "Helvetica Neue", serif;
+  font-size: 30px !important;
+  color: #4a4a4a;
+  padding-top: 50px !important;
+  padding-bottom: 30px !important;
+}
+
+#test {
+  color: #000000;
+}
+
+.SOFoot {
+  background-color: #363636;
+  color: white;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin-top: 10px;
+  text-align: center;
 }
