--- a/app/client/style.css
+++ b/app/client/style.css
@@ -45,7 +45,7 @@
 }
 
 .features {
-  background-color: #ffffff;
+  background-color: #fcfbfb;
 }
 
 h1 {
@@ -53,6 +53,13 @@ h1 {
   font-size: 30px !important;
   color: #4a4a4a;
   padding-top: 50px !important;
+  padding-bottom: 30px !important;
+}
+
+h4 {
+  font-family: "Roboto", "Helvetica Neue", serif;
+  color: #4a4a4a;
+  font-size: 25px !important;
   padding-bottom: 30px !important;
 }
 
@@ -66,6 +73,6 @@ h1 {
   left: 0;
   bottom: 0;
   right: 0;
-  margin-top: 10px;
+  margin-top: 14px;
   text-align: center;
 }
