--- a/app/client/style.css
+++ b/app/client/style.css
@@ -22,7 +22,6 @@
   left: 0;
   bottom: 0;
   right: 0;
-  margin-top: -40px;
   text-align: center;
 }
 
@@ -134,4 +133,10 @@ h4 {
 
 #sign-in-text {
   text-align: center;
+}
+
+#prof-middle {
+  background-color: #f5f2ee !important;
+  padding-top: 50px;
+  padding-bottom: 700px;
 }
