--- a/app/client/style.css
+++ b/app/client/style.css
@@ -10,6 +10,10 @@
   width: 250px !important;
 }
 
+.limitCard {
+  height: 450px;
+ }
+
 #background-temp {
   background-size: auto;
   background: url("/images/manoa-blur.jpg") !important;
