--- a/app/client/style.css
+++ b/app/client/style.css
@@ -5,6 +5,26 @@
   padding-left: 0;
 }
 
+#sidebar {
+  border: none;
+  box-shadow: none ;
+  background-color: #FCFBFB;
+}
+
+.side-bar-items {
+padding-top: 20px !important;
+}
+
+#toggle a{
+  font-family: "Gordita", "Helvetica Neue", serif !important;
+  margin-left: 30px;
+  margin-top: 22px;
+  font-weight: bold;
+  font-size: 15px;
+  color: #024731 !important;
+  border-bottom: 1px solid #024731;
+}
+
 .limit {
   height: 200px !important;
   width: 250px !important;
@@ -88,7 +108,7 @@ img.ui.avatar.image {
 }
 
 #store-content {
-  padding-left: 250px !important;
+  padding-left: -25px !important;
 }
 
 #report {
