--- a/app/client/style.css
+++ b/app/client/style.css
@@ -10,10 +10,10 @@
 }
 
 #store-test {
-  padding-top: 30px;
+  padding-top: 100px;
 }
 #item-page {
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 
@@ -43,7 +43,9 @@ p.side-bar-items:after {
   background: #FFD700;
   transition: width .75s;
 }
-
+.ui.input:focus {
+  border: 1px solid #024731 !important;
+}
 p.side-bar-items:hover:after {
   width: 100%;
 }
@@ -94,7 +96,7 @@ p.side-bar-items:hover:after {
  }
 
 .not-menu-item {
-  font-family: "Gordita", "Helvetica Neue", serif !important;
+  font-family: "Roboto", "Helvetica Neue", serif;
   margin-top: 22px;
   font-weight: bold;
   font-size: 15px;
@@ -108,6 +110,7 @@ p.side-bar-items:hover:after {
 p.not-menu-item:after {
   content: '';
   display: block;
+  font-family: "Roboto", "Helvetica Neue", serif;
   width: 0;
   height: 2px;
   background: #FFD700;
@@ -175,24 +178,6 @@ img.ui.avatar.image {
   color: #024731 !important;
   padding-top: 60px;
   padding-left: 0;
-}
-
-#real-search {
-  background-color: #fcfbfb !important;
-  border: none;
-  border-bottom: 2px solid #000000 !important;
-  border-radius: 0 !important;
-  box-shadow: none !important;
-  margin-top: 0;
-}
-
-#search {
-  background-color: #fcfbfb !important;
-  border: none;
-  border-bottom: 2px solid #000000 !important;
-  border-radius: 0 !important;
-  box-shadow: none !important;
-  margin-top: -6px;
 }
 
 .footer-background {
