--- a/app/client/style.css
+++ b/app/client/style.css
@@ -96,9 +96,8 @@ p.side-bar-items:hover:after {
  }
 
 .not-menu-item {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   margin-top: 22px;
-  font-weight: bold;
   font-size: 15px;
   color: #024731 !important;
 }
@@ -110,7 +109,7 @@ p.side-bar-items:hover:after {
 p.not-menu-item:after {
   content: '';
   display: block;
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   width: 0;
   height: 2px;
   background: #FFD700;
