--- a/app/client/style.css
+++ b/app/client/style.css
@@ -279,6 +279,10 @@ h4 {
   text-align: center !important;
 }
 
+#edit-page {
+  padding-top: 90px;
+}
+
 #log-page {
   font-family: "Roboto", "Helvetica Neue", serif;
   background-color: #fafafa !important;
