--- a/app/client/style.css
+++ b/app/client/style.css
@@ -83,9 +83,15 @@ p.side-bar-items:hover:after {
   cursor: pointer;
 }
 
-.limit {
+.cardImage {
   height: 200px !important;
   width: 250px !important;
+}
+
+.itemPageImage {
+  height: 500px;
+  width: 600px;
+  padding-right: 20px;
 }
 
 .limitCard {
