cleaned up some style things

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -22,7 +22,7 @@
   color: #024731 !important;
 }
 
-#add-font {
+#thin-font {
   font-family: "lato", "Helvetica Neue", serif !important;
   font-weight: normal;
 }
