--- a/app/client/style.css
+++ b/app/client/style.css
@@ -176,7 +176,7 @@ img.ui.avatar.image {
 #header {
   padding-top: 50px;
   color: #000000;
-  font-family: "Gordita", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   font-size: 50px;
 }
 
@@ -244,7 +244,7 @@ img.ui.avatar.image {
 }
 
 h1 {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   font-size: 30px !important;
   color: #4a4a4a;
   padding-top: 50px !important;
@@ -252,7 +252,7 @@ h1 {
 }
 
 h4 {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   color: #4a4a4a;
   padding-bottom: 30px !important;
 }
@@ -277,14 +277,14 @@ h4 {
 }
 
 #sign-page {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   background-color: #fafafa !important;
   /*#FFFFFF or #f5f2ee try this later instead for white background*/
   height: 100%;
 }
 
 #span {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   color: #000000;
   text-align: center !important;
 }
@@ -294,7 +294,7 @@ h4 {
 }
 
 #log-page {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   background-color: #fafafa !important;
   /*#FFFFFF or #f5f2ee try this later instead for white background*/
   height: 100%;
@@ -311,7 +311,7 @@ h4 {
 }
 
 #out-page {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   background-color: #fafafa !important;
   /*#FFFFFF or #f5f2ee or #fafafa try this later instead for white background*/
   height: 100%;
@@ -319,7 +319,7 @@ h4 {
 
 #redirect {
   text-align: center !important;
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
   font-weight: bold;
   font-size: 30px;
   padding-bottom: 50px;
@@ -336,7 +336,7 @@ h4 {
 }
 
 #profText {
-  font-family: "Roboto", "Helvetica Neue", serif;
+  font-family: "Lato", "Helvetica Neue", serif;
 }
 
 .dropdown.icon {
