--- a/app/client/style.css
+++ b/app/client/style.css
@@ -140,7 +140,7 @@ p.side-bar-items:after {
   display: block;
   width: 0;
   height: 2px;
-  background: #FFD700;
+  background: #a0e8a0;
   transition: width .75s;
 }
 
@@ -213,7 +213,7 @@ p.not-menu-item:after {
   font-family: "Lato", "Helvetica Neue", serif;
   width: 0;
   height: 2px;
-  background: #FFD700;
+  background: #a0e8a0;
   transition: width .75s;
 }
 
@@ -231,7 +231,7 @@ img.ui.avatar.image:hover {
 }
 
 img.ui.avatar.image:hover {
-  border: 3px solid #FFD700 !important;
+  border: 3px solid #a0e8a0 !important;
 }
 
 img.ui.avatar.image {
@@ -254,7 +254,6 @@ img.ui.avatar.image {
   padding-top: 150px;
   padding-bottom: 200px;
   color: white;
-  font: sans-serif;
 }
 
 .edit {
