animation on view all items

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -142,7 +142,7 @@
   cursor: pointer;
 }
 
-.all-items-button {
+#all-items-button {
   padding-bottom: 10px;
   padding-top: 10px;
   text-align: left;
