--- a/app/client/style.css
+++ b/app/client/style.css
@@ -142,6 +142,10 @@
   cursor: pointer;
 }
 
+#all-items-button.side-bar-items {
+  margin-left: 5px !important;
+}
+
 #all-items-button {
   padding-bottom: 10px;
   padding-top: 10px;
